# nonce_guess

./: .gitignore  .prettierrc  Cargo.toml  Dockerfile  README.md  build.rs  justfile  package-lock.json  package.json  tailwind.config.js  tailwind.config.js.old
.github/workflows/: release.yml
assets/: auth.js  main.css  site.webmanifest
helm/nonce-guess/: Chart.yaml  values.yaml
helm/nonce-guess/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
helm/nonce-guess/templates/tests/: test-connection.yaml
migrations/: 20221210_create_tables.sql
mockup/: justfile  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
mockup copy/: justfile  tailwind.config.js
mockup copy/src/: input.css
mockup/assets/: auth.js
mockup/src/: guess.html  login.html
ng_model/: Cargo.toml
ng_model/src/: lib.rs
ng_server/: Cargo.toml  package.json  pnpm-lock.yaml  tailwind.config.cjs
ng_server/assets/: auth.js
ng_server/migrations/: 20221210_create_tables.sql
ng_server/src/: auth.rs  db.rs  error.rs  main.rs  model.rs  startup.rs
ng_server/src/web/: app.rs  auth.rs  mod.rs  protected.rs  restricted.rs
ng_server/src/web/template/: home.rs  mod.rs
ng_server/templates/components/: guess.html  login.html
ng_server/templates/fragments/: guesses.html  my_guess.html  target.html
ng_server/templates/layouts/: base.html
ng_server/templates/pages/: admin.html  home.html  login.html
ng_web/: Cargo.toml  index.html
ng_web/src/: app.rs  block_entry.rs  field_entry.rs  guess_entry.rs  main.rs
src/: app.rs  db.rs  error.rs  main.rs  model.rs  protected.rs  restricted.rs  session_store.rs  types.rs
src/auth/: backend.rs  db.rs  mod.rs  types.rs  web.rs
src/guess/: backend.rs  db.rs  types.rs  web.rs
src/web/: app.rs  auth.rs  mod.rs  protected.rs  restricted.rs
src/web/auth/: mod.rs  types.rs  web.rs
src/web/template/: home.rs  login.rs  mod.rs
styles/: tailwind.css
templates/: base.html  guess_table.html  home.html  home_guesses.html  home_target.html  login.html  nav.html  profile.html  register.html  register_form.html  target.html  target_table.html
