[package]
name = "ng_web"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-router = { version = "0.17" }
web-sys = { version = "0.3", features = ["HtmlElement", "HtmlInputElement", "Node", "Document"] }
thousands = "0.2.0"
ng_model = { path = "../ng_model" }
gloo-net = "0.2"
gloo-utils = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.4.5"
log = "0.4"
wasm-logger = "0.2.0"
qrcode-generator = "4.1.7"
base64 = "0.21.0"
